fix mobile loading align

--- a/src/components/chatBotCouplet/index.css
+++ b/src/components/chatBotCouplet/index.css
@@ -398,6 +398,14 @@
          display: none;
     }
 
+    .loading {
+        width: 100%;
+        min-height: 100px;
+        background-image: url("img/loading.gif");
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+
     /* Adjust font sizes for mobile */
     .hint {
         font-size: 16px; /* Adjust the font size as needed */
